# raytracer

./: .cmake-format.yaml  CMakeLists.txt  README.md  raytracer.files  raytracer.includes
cmake/: BazelHelpers.cmake  Cache.cmake  Warnings.cmake
examples/: CMakeLists.txt  canvas_demo.cpp  group_demo.cpp  parser_demo.cpp  ray_sphere_demo.cpp  render_demo.cpp  shading_demo.cpp  triangle_demo.cpp  tuple_demo.cpp
rt/: CMakeLists.txt  camera.cpp  camera.h  camera_test.cpp  canvas.cpp  canvas.h  canvas_test.cpp  color.h  color_test.cpp  cone.cpp  cone.h  cone_test.cpp  cube.cpp  cube.h  cube_test.cpp  cylinder.cpp  cylinder.h  cylinder_test.cpp  group.cpp  group.h  group_test.cpp  intersection.cpp  intersection.h  intersection_test.cpp  light.h  material.cpp  material.h  material_test.cpp  parser.cpp  parser.h  parser_test.cpp  pattern.cpp  pattern.h  pattern_test.cpp  plane.cpp  plane.h  plane_test.cpp  ray.h  ray_test.cpp  render.cpp  (+25 more)
src/: CMakeLists.txt  camera.cpp  camera.h  canvas.cpp  canvas.h  color.h  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  intersection.cpp  intersection.h  intersection_test.cpp  light.h  logging.h  material.cpp  material.h  material_test.cpp  parser.cpp  parser.h  pattern.cpp  pattern.h  pattern_test.cpp  plane.h  ray.h  render.cpp  render.h  shape.cpp  shape.h  shapes.h  sphere.cpp  sphere.h  stats.h  te.hpp  timer.h  transform.h  (+5 more)
src/core/: CMakeLists.txt  color.h  intersection.cpp  intersection_test.cpp  light.h  material.cpp  material.h  material_test.cpp  pattern.cpp  pattern_test.cpp  ray.h  ray_test.cpp  transform_test.cpp  tuple.h  tuple_test.cpp  types.h
src/render/: CMakeLists.txt  camera.cpp  camera_test.cpp  canvas.cpp  canvas.h  canvas_test.cpp  render.cpp  render.h  render_test.cpp  world_test.cpp
src/shapes/: CMakeLists.txt  cone.cpp  cone.h  cone_test.cpp  cube.cpp  cube.h  cube_test.cpp  cylinder.cpp  cylinder.h  cylinder_test.cpp  group.cpp  group.h  group_test.cpp  plane.cpp  plane.h  plane_test.cpp  shape.cpp  shape.h  shape_test.cpp  shapes.h  smooth_triangle.cpp  smooth_triangle.h  smooth_triangle_test.cpp  sphere.cpp  sphere.h  sphere_test.cpp  triangle.cpp  triangle.h  triangle_test.cpp
src/utils/: CMakeLists.txt  parser.cpp  parser.h  parser_test.cpp  te.hpp  timer.cpp  timer.h  timer_test.cpp  viz.h
tests/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  color_test.cpp  cone_test.cpp  cube_test.cpp  cylinder_test.cpp  group_test.cpp  intersection_test.cpp  light_test.cpp  material_test.cpp  parser_test.cpp  pattern_test.cpp  plane_test.cpp  ray_test.cpp  render_test.cpp  shape_test.cpp  smooth_triangle_test.cpp  sphere_test.cpp  timer_test.cpp  transform_test.cpp  triangle_test.cpp  tuple_test.cpp  world_test.cpp
